fix sidebar collapse annotation css

--- a/src/styles/components/_annotation.scss
+++ b/src/styles/components/_annotation.scss
@@ -798,6 +798,10 @@ annotation {
         .pnd-annotation__notebook {
             display: none;
         }
+        
+        pnd-social-annotation-section {
+            display: none;
+        }
 
         &.is-hovered, &:hover {
             .pnd-annotation__highlight {
